fix(Dashboard): dark mode bugs fixed BREAKING CHANGE:

--- a/pages/index.module.scss
+++ b/pages/index.module.scss
@@ -84,7 +84,6 @@
                   line-height: 45px;
                   text-align: center;
                   border-radius: 8px;
-                  background: #fafafb;
                   display: inline-block;
                   border: 1px solid #f2f5f9;
                   display: flex;
